fix header gap

--- a/client/src/views/Home.module.css
+++ b/client/src/views/Home.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 10px;
   margin-top: 50px;
   margin-bottom: 30px;
 }
